--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,12 @@ main {
     height: 600px;
     border-radius: 35px;
     box-shadow: 0 0 20px 0 #b99bd4;
-   
+    transition: all 0.5s ease;
+}
+
+.trabajos__item1:hover {
+    width: 475px;
+    height: 625px;
 }
 
 .trabajos__item2 {
@@ -131,7 +136,12 @@ main {
     height: 600px;
     border-radius: 35px;
     box-shadow: 0 0 20px 0 #b99bd4;
-   
+    transition: all 0.5s ease;   
+}
+
+.trabajos__item2:hover {
+    width: 475px;
+    height: 625px;
 }
 
 .trabajos__item-foto {
