--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     
 }
 
+/*
 @font-face {
     font-family: 'lobster';
     src: url('../assets/font/Lobster/Lobster-Regular.ttf');
@@ -397,3 +398,5 @@ h5 {
         padding: 0;
     }
 }
+
+*/
