--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1,33 +1,34 @@
-main {
+.inicio {
     grid-area: main;
     margin: 30px;
     background-color:  #dec9f0;
+
+    h1 {
+        padding-top: 1em;
+        text-align: center;
+        color: #ffff;
+        font-size: 100px;
+        font-weight: lighter;
+        font-family: "recoleta";
+    }
+
+    h2 {
+        padding: 0.5em 0 1em 0;
+        color: #ffff;
+        font-family: 'Dancing Script', cursive;
+        font-size: 70px;
+        text-align: center; 
+    }
+
+    p {
+        text-align: center;
+        font-family: 'lobster';
+        font-size: 40px;
+        padding-bottom: 1em;
+        color: rgb(240, 238, 238);
+    }
 }
 
-.titulo-principal {
-    padding-top: 1em;
-    text-align: center;
-    color: #ffff;
-    font-size: 100px;
-    font-weight: lighter;
-    font-family: "recoleta";
-}
-
-.titulo-secundario {
-    padding: 0.5em 0 1em 0;
-    color: #ffff;
-    font-family: 'Dancing Script', cursive;
-    font-size: 70px;
-    text-align: center;   
-}
-
-.texto-principal {
-    text-align: center;
-    font-family: 'lobster';
-    font-size: 40px;
-    padding-bottom: 1em;
-    color: rgb(240, 238, 238);
-}
 
 .trabajos {
     display: grid;
@@ -48,18 +49,19 @@ main {
         box-shadow: 0 0 20px 0 #b99bd4;
         transition: all 0.5s ease;
 
+        &-foto {
+            height: 450px;
+            width: 350px;
+            margin-top: 20px;
+            border-radius: 15px; 
+        }
+        
         &:hover {
             width: 465px;
             height: 615px;
         }
-
-        &-fotos {
-            height: 450px;
-        width: 350px;
-        margin-top: 20px;
-        border-radius: 15px; 
-        }
     }
+
     h3 {
         margin: 0px 50px;
         font-family: "recoleta";
@@ -80,21 +82,24 @@ main {
     }
 }
 
-.parte-secundaria {
+.inicio2 {
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: auto;
     justify-content: center;   
+
+    &__titulo {
+        padding: 1em 0 1em 0;
+        font-family: 'lobster';
+        font-size: 50px;
+        text-align: center;
+        color: #ffff;
+    }
+
+    &__video {
+        margin-bottom: 50px;
+    }
 }
 
-.subtitulo-principal {
-    padding: 1em 0 1em 0;
-    font-family: 'lobster';
-    font-size: 50px;
-    text-align: center;
-    color: #ffff;
-}
 
-.video-principal {
-    margin-bottom: 50px;
-}
+
