--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,7 @@
 @import './component/variables';
 @import './component/global';
 @import './component/header';
+@import './component/footer';
 @import './pages/index';
 @import './component/mediaqueries';
+
