--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,7 @@
 
 .grilla {
   display: grid;
-  grid-template-areas: "header header"
- "main main"
- "footer footer";
+  grid-template-areas: "header header" "main main" "footer footer";
   grid-template-rows: repeat(3, auto);
   grid-template-columns: repeat(2, auto); }
 
@@ -74,7 +72,7 @@ footer {
     font-size: 100px;
     font-weight: lighter;
     font-family: "recoleta"; }
-  .inicio h2 {
+  .inicio h2, .inicio .inicio2__titulo {
     padding: 0.5em 0 1em 0;
     color: #ffff;
     font-family: 'Dancing Script', cursive;
@@ -89,8 +87,8 @@ footer {
 
 .trabajos {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   grid-column-gap: 40px;
   grid-row-gap: 40px;
   justify-items: center;
@@ -133,12 +131,6 @@ footer {
   grid-template-columns: auto;
   grid-template-rows: auto;
   justify-content: center; }
-  .inicio2__titulo {
-    padding: 1em 0 1em 0;
-    font-family: 'lobster';
-    font-size: 50px;
-    text-align: center;
-    color: #ffff; }
   .inicio2__video {
     margin-bottom: 50px; }
 
