--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -5,8 +5,8 @@
 
     h1 {
         padding-top: 1em;
-        text-align: center;
-        color: #ffff;
+        text-align: map-get($map: $estilos, $key: textcenter );
+        color: map-get($map: $estilos, $key: color );
         font-size: 100px;
         font-weight: lighter;
         font-family: "recoleta";
@@ -31,14 +31,8 @@
 
 
 .trabajos {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-column-gap:40px;
-    grid-row-gap: 40px;
-    justify-items: center;
-    align-items: center;
-    
+    @include etiquetas (2); 
+
     &__item {
         justify-self: center;
         background-color: #fff;
@@ -89,11 +83,7 @@
     justify-content: center;   
 
     &__titulo {
-        padding: 1em 0 1em 0;
-        font-family: 'lobster';
-        font-size: 50px;
-        text-align: center;
-        color: #ffff;
+        @extend h2
     }
 
     &__video {
