--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,5 +3,8 @@
 @import './component/header';
 @import './component/footer';
 @import './pages/index';
+@import './pages/portfolio';
+@import './pages/contacto';
+@import './pages/sobremi';
 @import './component/mediaqueries';
 
