--- a/scss/component/_mediaqueries.scss
+++ b/scss/component/_mediaqueries.scss
@@ -1,18 +1,18 @@
 @media (max-width: 1024px) {
-    .info {
+    .sobremi__info {
         display: grid;
         grid-template-columns: 1fr;
         justify-content: center;
     }
     
-    .info__foto {
+    .sobremi__info-foto {
         justify-self: center;
         height: 600px;
         width: auto;
         margin: 50px;
     }
 
-    .info__titulo {
+    .sobremi__info-titulo {
         padding: 0 0 30px 0;
         text-align: center;
     }
@@ -51,7 +51,7 @@
         justify-self: center;
     }
 
-    .trabajos-porfolios-foto {
+    .portfolio__trabajos-foto {
         height: 350px;
     }
 }
